# devkit_object_detection

./: README.md  package.xml  requirements.txt  setup.cfg  setup.py  view_markers.rviz
devkit_object_detection/: amr_positioning_node.py  detect.py  marker_pub_node.py  obj_detection_node.py  package.xml  tf_publisher_node.py
devkit_object_detection/devkit_object_detection/: detect.py
launch/: detection.launch.py
msg/: Object.msg  Objects.msg
